# lxl-nn

./: CMakeLists.txt  README.md
data/: addition.txt  addition_subtraction.txt  division.txt  multiplication.txt  sort4.txt  sqrt.txt
examples/: MNISTData.cpp  examples.h  sort4.cpp
include/: dataLoader.h  nn.h  test.h  timer.h
include/nn/: neuralNetwork.h  neuron.h  perceptron.h  synapse.h
include/test/: MNISTData.h  analyse.h  test.h  testResult.h
src/: main.cpp
src/nn/: backPropagate.cpp  feedForward.cpp  init.cpp  neuralNetwork.cpp  neuron.cpp  nn.cpp  normIO.cpp  perceptron.cpp  train.cpp  weights.cpp
test/: results.txt
